# gomoku-qt

./: CMakeLists.txt  build.sh  main.cpp
backend/include/: alpha-beta-ai.h  game-logic.h
backend/src/: alpha-beta-ai.cpp  game-logic.cpp
frontend/include/: board-widget.h  game-board-widget.h  main-window.h  menu-widget.h
frontend/src/: board-widget.cpp  game-board-widget.cpp  main-window.cpp  menu-widget.cpp
